# MCS

./: .cursorignore  .cursorrules  .dockerignore  .flake8  .gitignore  .markdownlint.json  README.md  docker-compose.yml  mcs_20250111233909.txt  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  settings.json  setup.py
.notes/: api_endpoints.md  development_standards.md  directory_structure.md  endpoint_checklist.md  endpoint_verification.md  frontend_tasks.md  hardware.md  http_methods.md  json_forms_implementation.md  meeting_notes.md  method_names.md  project_overview.md  response_models.md  services.md  task_list.md
backend/: .dockerignore  Dockerfile  requirements.txt
backend/config/: communication.json  communication.yaml  config.json  config.yaml  data_collection.json  data_collection.yaml  logging.json  mock_data.json  mock_data.yaml  process.json  process.yaml  state.yaml  tags.json  tags.yaml
backend/config/schemas/: communication.json  config.json  data_collection.json  process.json  tags.json
backend/data/nozzles/: cold_spray-mcs-24-vrc.json
backend/data/parameters/: mcs-24_n2_med_flow.json
backend/data/patterns/: linear.json  serpentine-100x50-posx.json  spiral.json
backend/data/powders/: copper-750nm-praxair-cp123456.json
backend/data/sequences/: test_sequence-test_user-v1.0-20241230.json
backend/migrations/: 01_init.sql  02_test_data.sql
backend/resources/tags/: MicroColdSpray_basic.csv
backend/schemas/config/: communication.json  logging.json
backend/schemas/process/: nozzle.json  parameter.json  pattern.json  powder.json  sequence.json
backend/src/mcs/: __init__.py  __main__.py
backend/src/mcs/api/archive/state/: __init__.py  __main__.py  state_app.py
backend/src/mcs/api/communication/: __init__.py  __main__.py  communication_app.py  communication_service.py
backend/src/mcs/api/communication/clients/: __init__.py  mock.py  plc.py  ssh.py
backend/src/mcs/api/communication/endpoints/: __init__.py  equipment.py  motion.py
backend/src/mcs/api/communication/models/: __init__.py  equipment.py  motion.py  state.py
backend/src/mcs/api/communication/services/: __init__.py  equipment.py  internal_state.py  motion.py  tag_cache.py  tag_mapping.py
backend/src/mcs/api/config/: __init__.py  __main__.py  config_app.py  config_service.py
backend/src/mcs/api/config/endpoints/: __init__.py  config_endpoints.py
backend/src/mcs/api/config/models/: __init__.py  config_models.py
backend/src/mcs/api/config/services/: __init__.py  file_service.py  format_service.py  schema_service.py
backend/src/mcs/api/data_collection/: __init__.py  __main__.py  data_collection_app.py  data_collection_router.py  data_collection_service.py  data_collection_storage.py
backend/src/mcs/api/process/: __init__.py  __main__.py  process_app.py  process_service.py
backend/src/mcs/api/process/endpoints/: __init__.py  parameter_endpoints.py  pattern_endpoints.py  process_endpoints.py  schema_endpoints.py  sequence_endpoints.py
backend/src/mcs/api/process/models/: __init__.py  process_models.py
backend/src/mcs/api/process/schemas/: __init__.py  sequence_schema.py
backend/src/mcs/api/process/services/: __init__.py  action_service.py  parameter_service.py  pattern_service.py  schema_service.py  sequence_service.py
backend/src/mcs/api/process/validators/: __init__.py  parameter_validator.py  pattern_validator.py  sequence_validator.py
backend/src/mcs/api/state/: __init__.py  __main__.py  state_app.py  state_service.py
backend/src/mcs/ui/: __main__.py  router.py
backend/src/mcs/ui/static/js/: base.js
backend/src/mcs/ui/templates/: base.html
backend/src/mcs/ui/templates/monitoring/: services.html
backend/src/mcs/utils/: __init__.py  health.py
docs/: communication_api.yaml
frontend/: .dockerignore  Dockerfile  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  theme.ts
frontend/src/components/: ConfigManagement.tsx  EquipmentControl.tsx  FileManagement.tsx  Layout.tsx  MaterialUILayout.tsx  Navigation.tsx  SequenceExecution.tsx  SystemMonitoring.tsx
frontend/src/config/: api.ts
frontend/src/context/: WebSocketContext.tsx
frontend/src/schemas/process/: index.ts  nozzle.schema.ts  parameter.schema.ts  pattern.schema.ts  powder.schema.ts  sequence.schema.ts
shared/: package.json
shared/src/: index.ts
