[project]
name = "mcs"
version = "1.0.0"
description = "Micro Cold Spray Control System"
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.1",
    "ruamel.yaml>=0.17.21",
    "paramiko>=3.4.0",
    "loguru>=0.7.0",
    "productivity>=0.12.0",
    "asyncssh>=2.13.2",
    "websockets>=12.0",
    "httpx>=0.24.0",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "typing_extensions>=4.0.0",
    "jsonschema>=4.17.3",
    "psutil>=5.9.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.9",
    "asyncio>=3.4.3",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src/mcs"]

[tool.ruff]
line-length = 120
target-version = "py39"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = ["E501"]

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=backend --cov-report=html"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["backend/src"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
] 